# Auto-Research-Pro-Max

./: .dockerignore  .gitignore  README.md  TODO.md  index.html  launcher.py  pyproject.toml  start-lan.cmd  start-lan.command  start.cmd  start.command  stop.cmd  stop.command  styles.css
assets/images/: screenshot.py
backend/app/: db.py  main.py  stages.py  templates.py
backend/app/services/: citation_graph.py  diffing.py  events.py  grounding.py  llm.py  papers.py  retrieval.py  runner.py  sandbox.py  validation.py  writing.py
deploy/: Dockerfile  README.md  cloudflare-pages-build.sh  cloudflare.md  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: StageTimeline.tsx
frontend/src/lib/: api.ts
tests/: conftest.py  test_sandbox_smoke.py
tests/fixtures/sandbox/minimal-bash/: README.md  run.sh
tests/fixtures/sandbox/minimal-pytest/: README.md  run_benchmark.sh
tests/fixtures/sandbox/minimal-pytest/src/: sample.py  test_sample.py
